--- a/Project/app/src/main/res/layout/fragment_pie_chart1.xml
+++ b/Project/app/src/main/res/layout/fragment_pie_chart1.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".fragment.PieChart1Fragment">
 
@@ -36,6 +37,108 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5"/>
+        android:layout_weight="5"
+        android:orientation="horizontal">
+
+        <lecho.lib.hellocharts.view.PieChartView
+            android:id="@+id/chart"
+            android:layout_width="260dp"
+            android:layout_height="260dp"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/ivColor1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="136dp"
+                android:src="@drawable/ic_baseline_brightness_1_24"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="#FFA500"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteX="0dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="136dp"
+                android:text="Strongly Disagree"
+                app:layout_constraintLeft_toRightOf="@+id/ivColor1"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="MissingConstraints" />
+
+            <ImageView
+                android:id="@+id/ivColor2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_brightness_1_24"
+                app:tint="#FF8C00"
+                app:layout_constraintTop_toBottomOf="@+id/ivColor1"
+                tools:ignore="MissingConstraints"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Disagree"
+                app:layout_constraintTop_toBottomOf="@+id/ivColor1"
+                app:layout_constraintLeft_toRightOf="@+id/ivColor2"
+                tools:ignore="MissingConstraints" />
+
+            <ImageView
+                android:id="@+id/ivColor3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_brightness_1_24"
+                app:tint="#FF7F50"
+                app:layout_constraintTop_toBottomOf="@+id/ivColor2"
+                tools:ignore="MissingConstraints"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Neutral"
+                app:layout_constraintTop_toBottomOf="@+id/ivColor2"
+                app:layout_constraintLeft_toRightOf="@+id/ivColor3"
+                tools:ignore="MissingConstraints" />
+
+            <ImageView
+                android:id="@+id/ivColor4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_brightness_1_24"
+                app:tint="#FF6347"
+                app:layout_constraintTop_toBottomOf="@+id/ivColor3"
+                tools:ignore="MissingConstraints"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Agree"
+                app:layout_constraintTop_toBottomOf="@+id/ivColor3"
+                app:layout_constraintLeft_toRightOf="@+id/ivColor4"
+                tools:ignore="MissingConstraints" />
+
+            <ImageView
+                android:id="@+id/ivColor5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_brightness_1_24"
+                app:tint="#FF6347"
+                app:layout_constraintTop_toBottomOf="@+id/ivColor4"
+                tools:ignore="MissingConstraints"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Strongly Agree"
+                app:layout_constraintTop_toBottomOf="@+id/ivColor4"
+                app:layout_constraintLeft_toRightOf="@+id/ivColor5"
+                tools:ignore="MissingConstraints" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
